[package]
name = "febrick"
version = "0.1.0"
edition = "2021"
authors = ["Radu Racariu <radu.racariu@gmail.com>"]
description = "Brick Schema programatic APIs."
repository = "https://github.com/rracariu/febrick"
keywords = ["ontology", "iot", "brick", "wasm"]
categories = ["library", "wasm"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "^1.0.78"
sophia = "^0.7.2"
sophia_api = "^0.7.2"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "^1.4.0"
log = "^0.4.14"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "^0.2.88", features = ["serde-serialize"] }
serde-wasm-bindgen = "^0.6.1"
js-sys = "^0.3.65"
web-sys = { version = "^0.3.65", features = ["Window"] }
wasm-bindgen-futures = "^0.4.38"
wasm-bindgen-console-logger = "^0.1.1"
console_error_panic_hook = "^0.1.7"

[dev-dependencies]
wasm-bindgen-test = "^0.3.38"
