[package]
name = "febrick"
version = "0.1.0"
edition = "2021"
authors = ["Radu Racariu <radu.racariu@gmail.com>"]
description = "Brick Schema programatic APIs."
repository = "https://github.com/rracariu/febrick"
keywords = ["ontology", "iot", "brick", "wasm"]
categories = ["library", "wasm"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "^1.0.99"
sophia = "^0.9.0"
sophia_api = "^0.9.0"
sophia_rio = "^0.9.0"
sophia_turtle = "^0.9.0"
rio_api = "^0.8.5"
serde = { version = "1.0", features = ["derive"] }
log = "^0.4.27"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "^0.2.100", features = ["serde-serialize"] }
serde-wasm-bindgen = "^0.6.5"
js-sys = "^0.3.77"
web-sys = { version = "^0.3.77", features = ["Window"] }
wasm-bindgen-futures = "^0.4.50"
wasm-bindgen-console-logger = "^0.1.1"
console_error_panic_hook = "^0.1.7"
tsify = "0.5.5"

[dev-dependencies]
wasm-bindgen-test = "^0.3.38"
